Perfected streamer pubsub services