@@ -15,8 +15,7 @@ import java.net.URLEncoder;
 import java.nio.charset.StandardCharsets;
 
 public class TwitchDeviceAuthorizationInitializationService {
-    private static String streamerScopes = "bits:read channel:read:redemptions user:read:email";
-    private static String viewerScopes = "user:read:email";
+    //private static String viewerScopes = "user:read:follows";
 
     public static TwitchAuthorizationInitializationData requestAuthentication(String scopes) throws Exception {
         String clientId = ConfigManager.getConfig().getTwitchAppClientId();
@@ -29,16 +28,19 @@ public class TwitchDeviceAuthorizationInitializationService {
         conn.setDoOutput(true);
         conn.setRequestProperty("Content-Type", "application/x-www-form-urlencoded");
 
-        String params = "client_id=" + URLEncoder.encode(clientId, "UTF-8") +
-                "&scope=" + URLEncoder.encode(scopes, "UTF-8");
+        String params = "client_id=" + URLEncoder.encode(clientId, StandardCharsets.UTF_8);
+
+        if (scopes != null) {
+            params += "&scopes=" + URLEncoder.encode(scopes, StandardCharsets.UTF_8);
+        }
 
         OutputStream os = conn.getOutputStream();
         os.write(params.getBytes(StandardCharsets.UTF_8));
         os.flush();
         os.close();
-
 // Read the response
         BufferedReader in = new BufferedReader(new InputStreamReader(conn.getInputStream()));
+        int responseCode = conn.getResponseCode();
         String inputLine;
         StringBuilder response = new StringBuilder();
         while ((inputLine = in.readLine()) != null) {
@@ -50,21 +52,21 @@ public class TwitchDeviceAuthorizationInitializationService {
         // Parse the JSON response using Gson
         Gson gson = new Gson();
         JsonObject jsonResponse = gson.fromJson(response.toString(), JsonObject.class);
-        System.out.println("Response: " + response.toString());
 
         String deviceCode = jsonResponse.get("device_code").getAsString();
         String userCode = jsonResponse.get("user_code").getAsString();
         String verificationUri = jsonResponse.get("verification_uri").getAsString();
         int expiresIn = jsonResponse.get("expires_in").getAsInt();
         int interval = jsonResponse.get("interval").getAsInt();
-        return new TwitchAuthorizationInitializationData(deviceCode, expiresIn, interval, userCode, verificationUri);
+        return new TwitchAuthorizationInitializationData(deviceCode, expiresIn, interval, userCode, verificationUri, responseCode);
     }
 
     public static TwitchAuthorizationInitializationData requestStreamerAuthentication() throws Exception {
+        String streamerScopes = "bits:read channel:read:subscriptions";
         return requestAuthentication(streamerScopes);
     }
 
     public static TwitchAuthorizationInitializationData requestViewerAuthentication() throws Exception {
-        return requestAuthentication(viewerScopes);
+        return requestAuthentication(null);
     }
 }
